--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,10 +18,12 @@ body {
   font-size: 24px;
   position: absolute;
   max-width: 200px;
-  font-size: 22px;
+  font-size: 21px;
   top: 81px;
   left: 77px;
   line-height: 0.97em;
+  text-indent:-0.8em;
+  word-wrap: break-word;
 }
 
 form {
@@ -30,10 +32,17 @@ form {
   font-size: 22px;
 }
 
+.hint {
+  font-size: 22px;
+  padding: 2px 0 0 192px;
+  margin: 0;
+  color: #ddd;
+}
+
 input[type=text] {
     padding: 2px 0;
     border: none;
-    width: 350px;
+    width: 400px;
     font-family: 'Short Stack', sans-serif;
     text-transform: uppercase;
     font-size: 22px;
@@ -54,7 +63,7 @@ input[type=submit] {
 .footer {
   text-align: center;
   text-transform: lowercase;
-  margin: 200px 0 50px 0;
+  margin: 190px 0 20px 0;
   color: #ccc;
 }
 
