Disable form outline

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,10 @@ input[type=submit] {
     cursor: pointer;
 }
 
+input:focus {
+  outline: none;
+}
+
 .footer {
   text-align: center;
   text-transform: lowercase;
