--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,10 +15,10 @@ body {
 .comment {
   margin: 0;
   padding: 0;
-  font-size: 24px;
   color: #222;
   position: absolute;
-  max-width: 200px;
+  height: 40px;
+  max-width: 197px;
   font-size: 21px;
   top: 82px;
   left: 78px;
